// Constants for the login page [login_page.dart]
class LoginConsts {
  static const appBarText = 'Log in';
  static const mainScreenText = 'Welcome back!';
}

// Constants for the signup page [signup_page.dart]
class SignupConsts {
  static const appBarText = 'Sign up';
  static const mainScreenText = 'Create your account';
}