...
    ),
  ];

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: Key('homepage'),
      extendBody: true,
      body: Center(
        child: [HomePageContent(), PostPage(), Container(), ProfilePage()][_selectedIndex], // Display the corresponding page based on the selected index
      ),
      bottomNavigationBar: Padding(
        padding: const EdgeInsets.all(30), // Padding around the bottom bar
...
