...
  Future<(bool isValid, String errorMsg)> userExists() async {
    try {
      final FirebaseFirestore db = FirebaseFirestore.instance;
      final users = db.collection('users');
      final QuerySnapshot usersWithUsername = await users.where('username', isEqualTo: _username).get();
      if (usersWithUsername.docs.isNotEmpty) {
        return (false, 'This username is already taken');
      }

      final QuerySnapshot usersWithEmail = await users.where('email', isEqualTo: _email).get();
      if (usersWithEmail.docs.isNotEmpty) {
        return (false, 'This email address is already taken');
      }

      return (true, '');
    } catch(error) {
      print(error);
      return (false, 'An unknown error occurred');
...
